--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,24 +4,45 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch:
 jobs:
   test:
-    timeout-minutes: 60
+    name: Run Playwright Tests
+    timeout-minutes: 30
     runs-on: ubuntu-latest
+    
+    strategy:
+      fail-fast: false
+      matrix:
+        browser: [chromium, firefox, webkit]
+    
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
-        node-version: lts/*
+        node-version: 20
+        cache: 'npm'
+    
     - name: Install dependencies
       run: npm ci
+    
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      run: npx playwright install ${{ matrix.browser }} --with-deps
+    
+    - name: Run tests on ${{ matrix.browser }}
+      run: npm run test:${{ matrix.browser }}
+      env:
+        CI: true
+    
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
       with:
-        name: playwright-report
-        path: playwright-report/
+        name: test-results-${{ matrix.browser }}-${{ github.run_id }}
+        path: |
+          allure-results/
+          playwright-report/
+          test-results/
         retention-days: 30
